tests/lean/inaccessible2.lean.expected.out
inaccessible2.lean:7:7: error: invalid occurrence of 'inaccessible' annotation, it must only occur in patterns
inaccessible2.lean:10:10: error: invalid pattern, must be an application, constant, variable, type ascription or inaccessible term
inaccessible2.lean:13:13: error: invalid pattern, must be an application, constant, variable, type ascription or inaccessible term
inaccessible2.lean:16:9: error: invalid pattern, in a constructor application, the parameters of the inductive datatype must be marked as inaccessible
